fix firefox and safari table checkbox positioning when row focus is visible
also fix the listview cursor indicator so it doesnt show the text selection indicator

--- a/packages/@adobe/spectrum-css-temp/components/table/index.css
+++ b/packages/@adobe/spectrum-css-temp/components/table/index.css
@@ -263,6 +263,7 @@ svg.spectrum-Table-sortedIcon {
 
     .spectrum-Table-cellWrapper:first-of-type {
       display: inline-block;
+      vertical-align: top;
     }
   }
 
