--- a/packages/@react-spectrum/list/src/listview.css
+++ b/packages/@react-spectrum/list/src/listview.css
@@ -43,6 +43,8 @@
 }
 
 .react-spectrum-ListView-row {
+  cursor: default;
+
   &:focus-ring {
     &:before {
       content: '';
